# thunar_git_plugin

./: INSTALL.md  README.md  meson.build  thunar-git-plugin-1.0.0.ebuild
src/: tgp-credentials.c  tgp-credentials.h  tgp-dialogs.c  tgp-dialogs.h  tgp-emblem-provider.c  tgp-emblem-provider.h  tgp-git-utils.c  tgp-git-utils.h  tgp-menu-provider.c  tgp-menu-provider.h  tgp-plugin.c  tgp-plugin.h
